small z-index fix for menuContainer

--- a/template/css/main.less
+++ b/template/css/main.less
@@ -195,6 +195,7 @@ body {
 	}
 	#menuContainer {
 		position: absolute;
+		z-index: 2;
 		background-color: #000;
 		.menuContainerInner {
 			width: 140px;
